--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,5 @@
 <!-- views/partials/footer.ejs -->
 
-<p class="text-center text-muted">Bui Viet Hung - MIT License</p>
+<p class="text-center text-muted">Bui Viet Hung - MIT License <br />
+GIT REPOSITORY -<a href="https://github.com/sirhung1993/yoursaving"> https://github.com/sirhung1993/yoursaving </a>
+</p>
