--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
     <div class="container-fluid">
 
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/yoursaving">
                 <span class="glyphicon glyphicon glyphicon-tree-deciduous"></span>
                 Your saving
             </a>
