--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,92 +5,216 @@
 <head>
     <% include ../partials/head %>
 </head>
-<body class="container">
+<body class="w3-layout-container">
 
     <header>
         <% include ../partials/header %>
     </header>
+    <!-- <b>Calculate your saving by fill the form below!</b>
+    <p>In put your income here. The saving is under compound interest calculation</p>
+    <i style="color:red"> The information input here is not secured.<br />
+        There is no HTTPs connection here. Your infomation will be send as plaintext.<br />
+        It could be read by other who are in the same Local Area Netword.<br />
+        With some sniffing TOOL.<br .></i>
+    <i> However, there is no identity information here. And your information <br />
+        will not be stored in our DATABASE.</i> -->
 
-    <main>
-        <div class="jumbotron">
-            <b>Calculate your saving by fill the form below!</b>
-            <p>In put your income here. The saving is under compound interest calculation</p>
-            <i style="color:red"> The information input here is not secured.<br />
-                There is no HTTPs connection here. Your infomation will be send as plaintext.<br />
-                It could be read by other who are in the same Local Area Netword.<br />
-                With some sniffing TOOL.<br .></i>
-            <i> However, there is no identity information here. And your information <br />
-                will not be stored in our DATABASE.</i>
-            <form action="/yoursaving/calculation" id="saving" method="post">
-                <fieldset>
-                <label> Your age :
-                    <input type="number" name="age" placeholder="How old are you?"/>
-                    years old - optional
-                </label><br />
-                <label> Your income per month :
-                    <input type="number" name="monthSalary" placeholder="10000000"/>
-                    (VNĐ).
-                </label> <br />
-                <label> Your salary increment per year :
-                    <input type="text" name="salaryIncrement" placeholder="10"/>
-                    (%/year) - optional.
-                </label> <br />
-                <label> Your bonus salary (eg. : 13th month salary) :
-                    <input type="number" name="bonusSalary" placeholder="10000000"/>
-                    (VNĐ) - optional.
-                </label> <br />
-                <label> Your bonus money in a year :
-                    <input type="number" name="bonusReward" placeholder="10000000"/>
-                    (VNĐ) - assume that you have a personal business or others.
-                </label>
-                <label> When do you receive the bonus money :
-                    <input type="number" name="monthReceiveBonus" value="1"/>
-                    (month in number) - default is 1st month.
-                </label> <br />
-                <label> Your fix cost per month :
-                    <input type="number" name="fixCost" placeholder="4000000"/>
-                    (VNĐ).
-                </label><br />
-                <label> Your fix cost increment per year :
-                    <input type="text" name="fixCostIncrement" placeholder="0"/>
-                    (%/year) - optional.
-                </label> <br />
-                <label> The approximate Bank interest :
-                    <input type="text" name="bankInterest" placeholder="0.5"/>
-                    (%/month) - assume that you save the money in the Bank.
-                </label><br />
-                <label> The approximate inflation rate :
-                    <input type="number" name="inflationRate" placeholder="7"/>
-                    (%/year) - 0% if there is no inflation or you do not care about inflation rate.
-                </label><br />
-                <label> How many years you want to do the calculation :
-                    <input type="number" name="calculationDuration" placeholder="0.5"/>
-                    (year(s)) - the maximum duration the you want estimate your saving.
-                </label><br />
-                <label> The format of saving :
-                    <select name="typeOfFormat" form="saving">
-                        <option value="year">By year</option>
-                        <option value="month">By month</option>
-                    </select>
-                    The output format of the total asset per month or year.
-                </label><br />
-                <input type="submit" value="Submit" />
+<div>
+    <div class="w3-container w3-green">
+      <h2>Input your income :</h2>
+    </div>
+    <form action="/yoursaving/calculation" id="saving" method="post" class="w3-container">
+        <fieldset>
+        <div class="w3-border-bottom w3-border-blue w3-container w3-hover-border-purple">
+            <div class="w3-container w3-quarter">
+                <label> Your age : </label >
+            </div>
+            <div class="w3-container w3-half">
+                <input type="number" name="age" placeholder="How old are you?"
+                class="w3-input w3-border" alt="This field is optional!"/>
+            </div>
+            <div class="w3-container w3-quarter">
+                <b class="w3-text-blue"> years old </b>
+            </div>
+        </div>
+        <div class="w3-border-bottom  w3-border-blue w3-container w3-hover-border-purple">
+            <div class="w3-container w3-quarter">
+                <label> Your income per month : </label>
+            </div>
+            <div class="w3-container w3-half">
+                <input class="w3-input" type="number" name="monthSalary" placeholder="10000000"/>
+            </div>
+            <div class="w3-container w3-quarter">
+                <b class="w3-text-red" id="vnd"> (VNĐ)</b>
+            </div>
+        </div>
+        <div class="w3-border-bottom  w3-border-blue w3-container w3-hover-border-purple">
+            <div class="w3-container w3-quarter">
+                <label> Your salary increment per year :</label>
+            </div>
+            <div class="w3-container w3-half">
+                <input class="w3-input" type="text" name="salaryIncrement" placeholder="10"/>
+            </div>
+            <div class="w3-container w3-quarter">
+                <b class="w3-text-blue"> (%/year) </b>
+            </div>
+        </div>
+        <div class="w3-border-bottom  w3-border-blue w3-container w3-hover-border-purple">
+            <div class="w3-container w3-quarter">
+                <label> Your bonus salary <br />(eg. : 13th month salary) :</label>
+            </div>
+            <div class="w3-container w3-half">
+                <input class="w3-input" type="number" name="bonusSalary" placeholder="10000000"/>
+            </div>
+            <div class="w3-container w3-quarter">
+                <b class="w3-text-blue" id="vnd"> (VNĐ) </b>
+            </div>
+        </div>
+
+        <div class="w3-border-bottom  w3-border-blue w3-container w3-hover-border-purple">
+            <div class="w3-container w3-quarter">
+                <label> Your bonus money in a year :</label>
+            </div>
+            <div class="w3-container w3-half">
+                <input class="w3-input" type="number" name="bonusReward" placeholder="10000000"/>
+            </div>
+            <div class="w3-container w3-quarter">
+                <b class="w3-text-blue" id="vnd"> (VNĐ) <br />assume that you have a personal business or others. </b>
+            </div>
+        </div>
+
+        <div class="w3-border-bottom  w3-border-blue w3-container w3-hover-border-purple">
+            <div class="w3-container w3-quarter">
+                <label> When do you <br />
+                receive the bonus money : </label>
+            </div>
+            <div class="w3-container w3-half">
+                <input  class="w3-input" type="number" name="monthReceiveBonus" value="1"/>
+            </div>
+            <div class="w3-container w3-quarter">
+                <b class="w3-text-blue">    (month in number) - default is 1st month. </b>
+            </div>
+        </div>
+
+        <div class="w3-border-bottom  w3-border-blue w3-container w3-hover-border-purple">
+            <div class="w3-container w3-quarter">
+                <label> Your fix cost per month : </label>
+            </div>
+            <div class="w3-container w3-half">
+                <input class="w3-input" type="number" name="fixCost" placeholder="4000000"/>
+            </div>
+            <div class="w3-container w3-quarter">
+                <b class="w3-text-blue" id="vnd"> (VNĐ)  </b>
+            </div>
+        </div>
+
+        <div class="w3-border-bottom  w3-border-blue w3-container w3-hover-border-purple">
+            <div class="w3-container w3-quarter">
+                <label> Your fix cost increment per year :</label>
+            </div>
+            <div class="w3-container w3-half">
+                <input  class="w3-input" type="text" name="fixCostIncrement" placeholder="0"/>
+            </div>
+            <div class="w3-container w3-quarter">
+                <b class="w3-text-blue"> (%/year)</b>
+            </div>
+        </div>
+
+        <div class="w3-border-bottom  w3-border-blue w3-container w3-hover-border-purple">
+            <div class="w3-container w3-quarter">
+                <label> The approximate Bank interest :</label>
+            </div>
+            <div class="w3-container w3-half">
+                <input class="w3-input" type="text" name="bankInterest" placeholder="0.5"/>
+            </div>
+            <div class="w3-container w3-quarter">
+                <b class="w3-text-blue"> (%/month)</b>
+                <p>assume that you save the money in the Bank.</p>
+            </div>
+        </div>
+
+        <div class="w3-border-bottom  w3-border-blue w3-container w3-hover-border-purple">
+            <div class="w3-container w3-quarter">
+                <label> The approximate inflation rate :</label>
+            </div>
+            <div class="w3-container w3-half">
+                <input class="w3-input" type="number" name="inflationRate" placeholder="7"/>
+            </div>
+            <div class="w3-container w3-quarter">
+                <b class="w3-text-blue"> (%/year)</b>
+                <p>0% if there is no inflation or you do not care about inflation rate.</p>
+            </div>
+        </div>
+
+        <div class="w3-border-bottom  w3-border-blue w3-container w3-hover-border-purple">
+            <div class="w3-container w3-quarter">
+                <label> How many years you want to do the calculation :</label>
+            </div>
+            <div class="w3-container w3-half">
+                <input class="w3-input" type="number" name="calculationDuration" placeholder="1"/>
+            </div>
+            <div class="w3-container w3-quarter">
+                <b class="w3-text-blue"> (year(s))</b>
+                <p>the maximum duration the you want estimate your saving.</p>
+            </div>
+        </div>
+
+        <div class="w3-border-bottom  w3-border-blue w3-container w3-hover-border-purple">
+            <div class="w3-container w3-quarter">
+                <label> The format of total saving :</label>
+            </div>
+            <div class="w3-container w3-half ">
+                <select  name="typeOfFormat" form="saving">
+                    <option value="month">By month  </option>
+                    <option value="year" >By year   </option>
+                </select>
+            </div>
+            <div class="w3-container w3-quarter">
+                <b class="w3-text-blue"> The output format of the total asset per month or year.</b>
+            </div>
+        </div>
+
+        <div class="w3-border-bottom  w3-border-blue w3-container w3-hover-border-purple">
+            <div class="w3-container w3-quarter">
+                <label> Which type of currency :</label>
+            </div>
+            <div class="w3-container w3-half">
+                <select class="w3-container" name="typeOfCurrency" form="saving" id="currencyType" onclick="ChangeCurrencyType()">
+                    <option value="vnd"> (VNĐ) </option>
+                    <option value="usd"> $Trump </option>
+                </select>
+            </div>
+            <div class="w3-container w3-quarter">
+                <b class="w3-text-blue"> Default is <b class="w3-text-red">Dollar Trump</b></b>
+            </div>
+        </div>
+
+                <input type="submit" value="Submit" class="w3-round w3-btn-block w3-blue w3-ripple w3-hover-indigo" />
+
             </fieldset>
             </form>
         </div>
-    </main>
-
-    <footer>
-        <% include ../partials/footer %>
-    </footer>
+<div class="w3-container">
     <ul>
     <% if (ReadableEstimationSaving) { %>
     <%    for ( let e in ReadableEstimationSaving) {  %>
-        <li><h4><%= ReadableEstimationSaving[e].name %> ------- <%= ReadableEstimationSaving[e].asset %></h4></li>
+            <div class="w3-container w3-half w3-bottombar">
+                <%= ReadableEstimationSaving[e].name %>
+            </div>
+            <div class="w3-container w3-half w3-bottombar w3-text-blue">
+                <%= ReadableEstimationSaving[e].asset %>
+            </div>
     <%  }  %>
     <% } else { %>
         <h1>Result here</h1>
     <%}%>
-</ul>
+    </ul>
+</div>
+
+
+    <footer>
+        <% include ../partials/footer %>
+    </footer>
+
 </body>
 </html>
