--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -23,7 +23,7 @@
     <div class="w3-container w3-green">
       <h2>Input your income :</h2>
     </div>
-    <form action="/yoursaving/calculation" id="saving" method="post" class="w3-container">
+    <form action="/calculation" id="saving" method="post" class="w3-container">
         <fieldset>
         <div class="w3-border-bottom w3-border-blue w3-container w3-hover-border-purple">
             <div class="w3-container w3-quarter">
