Update setDefault() and modify inflation rate display.

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="layout/w3.css">
 <style>
-    html,body    { font-family: "Nimbus Sans L", cursive, sans-serif; }
+    html,body    { font-family: "Liberation Serif", cursive, sans-serif; }
 </style>
 <script>
 <!--
