--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,8 +11,8 @@
         </div>
 
         <ul class="nav navbar-nav">
-            <li><a href="/yoursaving">Home</a></li>
-            <li><a href="/yoursaving/about">About</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
         </ul>
 
     </div>
