update favicon image

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,11 +1,12 @@
 <!-- views/partials/head.ejs -->
 
 <meta charset="UTF-8">
-<title>Yoursaving</title>
+<title>Yoursaving </title>
 
 <!-- CSS (load bootstrap from a CDN) -->
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="layout/w3.css">
+<link rel='shortcut icon' type='image/x-icon' href='layout/favicon.ico' />
 <style>
     html,body    { font-family: "Liberation Serif", cursive, sans-serif; }
 </style>
