--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="layout/w3.css">
 <link rel='shortcut icon' type='image/x-icon' href='layout/favicon.ico' />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
     html,body    { font-family: "Liberation Serif", cursive, sans-serif; }
 </style>
